# zero-to-production-in-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
migrations/: 20201102015811_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_checks.rs  mod.rs  subscriptions.rs  subscriptions.rs.bak
tests/: health_check.rs  health_checks.rs
